--- a/archetyp.css
+++ b/archetyp.css
@@ -2,27 +2,42 @@ body {
     background-color:black; 
     margin:0px; 
 }
-#control_panel {
+.control_panel {
     font-family: "Courier New",Monospace;
-    color: white;
-    position:fixed;
-    top:400px;
+    color:white;
+    position:relative;
+    top:500px;
+    width:500px;
+    border: solid 2px #ffffff;
+    padding: 1px;
 }
 
-ca {
-    position:absolute;
+p {
+    text-align: center;
+    padding: 5px;
+}
+h3 {
+    text-align: center;
+}
+
+ul {
+    text-align: left;
+}
+
+.ca {
+    position:relative;
     top:0;
     left:0;
 }
 
-#buff1 {
+.buff1 {
     position:absolute;
     top:2;
     left:0;
     visibility: hidden;
     border: solid 2px #ffffff;
 }
-#buff2 {
+.buff2 {
     position:absolute;
     top:2;
     left:0;
